// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxField works as expected 1`] = `
<div>
  <form
    class="Form__StyledForm-zf05us-0 bhlRPh"
  >
    <div
      class="CheckBoxField__StyledCheckBox-vw1j4b-0 dCxhCs"
    >
      <input
        aria-label="Test Input"
        aria-required="false"
        class="CheckBoxField__StyledCheckBoxInput-vw1j4b-1 isQqST"
        id="test-input"
        name="test-input"
        type="checkbox"
      />
      <div
        class="CheckBoxField__StyledCheckBoxLabel-vw1j4b-2 VsGyd"
      >
        Test Input
      </div>
    </div>
  </form>
</div>
`;

exports[`InputField does not trigger validation if not required 1`] = `
<div>
  <form
    class="Form__StyledForm-zf05us-0 bhlRPh"
  >
    <div
      class="styles__InputFieldWrapper-r3rrke-0 coSKbD"
    >
      <label
        class="styles__InputLabel-r3rrke-1 bYjYOY"
        for="test-input"
      >
        Test Input
      </label>
      <div
        class="styles__Row-r3rrke-3 hrcPDx"
      >
        <input
          aria-label="Test Input"
          aria-required="false"
          class="InputField__StyledInput-sc-1x24211-0 KNcEE"
          id="test-input"
          name="test-input"
          placeholder=""
          type="text"
        />
      </div>
      <span
        class="styles__InputError-r3rrke-2 cKUnfp"
      />
    </div>
  </form>
</div>
`;

exports[`InputField renders properly and on submit shows validation errors 1`] = `
<div>
  <form
    class="Form__StyledForm-zf05us-0 bhlRPh"
  >
    <div
      class="styles__InputFieldWrapper-r3rrke-0 iNxitI"
    >
      <label
        class="styles__InputLabel-r3rrke-1 bYjYOY"
        for="test-input"
      >
        Test Input
      </label>
      <div
        class="styles__Row-r3rrke-3 hrcPDx"
      >
        <input
          aria-label="Test Input"
          aria-required="true"
          class="InputField__StyledInput-sc-1x24211-0 KNcEE"
          id="test-input"
          name="test-input"
          placeholder=""
          type="text"
        />
        <svg
          class="Help__Icon-gq25zb-0 dZzjNa"
          currentItem="false"
          data-for="test-input"
          data-tip="true"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
          />
        </svg>
        <div
          class="__react_component_tooltip uuid place-right type-dark"
          data-id="tooltip"
          id="test-input"
        >
          <style>
            
  	.uuid {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.uuid.place-top {
        margin-top: -10px;
    }
    .uuid.place-top::before {
        border-top: 8px solid transparent;
    }
    .uuid.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .uuid.place-bottom {
        margin-top: 10px;
    }
    .uuid.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .uuid.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .uuid.place-left {
        margin-left: -10px;
    }
    .uuid.place-left::before {
        border-left: 8px solid transparent;
    }
    .uuid.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .uuid.place-right {
        margin-left: 10px;
    }
    .uuid.place-right::before {
        border-right: 8px solid transparent;
    }
    .uuid.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
          </style>
          <p>
            Help Text
          </p>
        </div>
      </div>
      <span
        class="styles__InputError-r3rrke-2 cKUnfp"
      >
        error:requiredField
      </span>
    </div>
  </form>
</div>
`;

exports[`SelectField does not trigger validation if not required 1`] = `
<div>
  <form
    class="Form__StyledForm-zf05us-0 bhlRPh"
  >
    <div
      class="styles__InputFieldWrapper-r3rrke-0 coSKbD"
    >
      <label
        class="styles__InputLabel-r3rrke-1 bYjYOY"
        for="test-input"
      >
        Test Input
      </label>
      <div
        class="styles__Row-r3rrke-3 hrcPDx"
      >
        <div
          class="SelectField__StyledSelect-sc-1q54avn-0 bmyMHz react-select-container css-2b097c-container"
          id="test-input"
        >
          <div
            class="react-select__control css-yk16xz-control"
          >
            <div
              class="react-select__value-container css-g1d714-ValueContainer"
            >
              <div
                class="react-select__placeholder css-1wa3eu0-placeholder"
              >
                Select...
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="react-select__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Test Input"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-3-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="test-input"
            type="hidden"
            value=""
          />
        </div>
      </div>
      <span
        class="styles__InputError-r3rrke-2 cKUnfp"
      />
    </div>
  </form>
</div>
`;

exports[`SelectField renders properly and on submit shows validation errors 1`] = `
<div>
  <form
    class="Form__StyledForm-zf05us-0 bhlRPh"
  >
    <div
      class="styles__InputFieldWrapper-r3rrke-0 iNxitI"
    >
      <label
        class="styles__InputLabel-r3rrke-1 bYjYOY"
        for="test-input"
      >
        Test Input
      </label>
      <div
        class="styles__Row-r3rrke-3 hrcPDx"
      >
        <div
          class="SelectField__StyledSelect-sc-1q54avn-0 bmyMHz react-select-container css-2b097c-container"
          id="test-input"
        >
          <div
            class="react-select__control css-yk16xz-control"
          >
            <div
              class="react-select__value-container css-g1d714-ValueContainer"
            >
              <div
                class="react-select__placeholder css-1wa3eu0-placeholder"
              >
                Select...
              </div>
              <div
                class="css-b8ldur-Input"
              >
                <div
                  class="react-select__input"
                  style="display: inline-block;"
                >
                  <input
                    aria-autocomplete="list"
                    aria-label="Test Input"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    id="react-select-2-input"
                    spellcheck="false"
                    style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                  <div
                    style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                  />
                </div>
              </div>
            </div>
            <div
              class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
              >
                <svg
                  aria-hidden="true"
                  class="css-6q0nyr-Svg"
                  focusable="false"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="test-input"
            type="hidden"
            value=""
          />
        </div>
        <svg
          class="Help__Icon-gq25zb-0 dZzjNa"
          currentItem="false"
          data-for="test-input"
          data-tip="true"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
          />
        </svg>
        <div
          class="__react_component_tooltip uuid place-right type-dark"
          data-id="tooltip"
          id="test-input"
        >
          <style>
            
  	.uuid {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.uuid.place-top {
        margin-top: -10px;
    }
    .uuid.place-top::before {
        border-top: 8px solid transparent;
    }
    .uuid.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .uuid.place-bottom {
        margin-top: 10px;
    }
    .uuid.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .uuid.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .uuid.place-left {
        margin-left: -10px;
    }
    .uuid.place-left::before {
        border-left: 8px solid transparent;
    }
    .uuid.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .uuid.place-right {
        margin-left: 10px;
    }
    .uuid.place-right::before {
        border-right: 8px solid transparent;
    }
    .uuid.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
          </style>
          <p>
            Help Text
          </p>
        </div>
      </div>
      <span
        class="styles__InputError-r3rrke-2 cKUnfp"
      >
        error:requiredField
      </span>
    </div>
  </form>
</div>
`;

exports[`SwitchField works as expected 1`] = `
<div>
  <form
    class="Form__StyledForm-zf05us-0 bhlRPh"
  >
    <div
      class="SwitchField__SwitchContainer-tbxbpw-0 gZcjCo"
    >
      <label
        class="styles__InputLabel-r3rrke-1 bYjYOY"
      >
        Test Input
      </label>
      <input
        class="SwitchField__SwitchInput-tbxbpw-1 feKIBx"
        id="test-input"
        name="test-input"
        type="checkbox"
      />
      <label
        class="SwitchField__SwitchLabel-tbxbpw-2 kxdlFx"
        for="test-input"
      >
        <p>
          Não
        </p>
        <span />
      </label>
    </div>
  </form>
</div>
`;

exports[`TextField does not trigger validation if not required 1`] = `
<div>
  <form
    class="Form__StyledForm-zf05us-0 bhlRPh"
  >
    <div
      class="styles__InputFieldWrapper-r3rrke-0 coSKbD"
    >
      <label
        class="styles__InputLabel-r3rrke-1 bYjYOY"
        for="test-input"
      >
        Test Input
      </label>
      <div
        class="styles__Row-r3rrke-3 hrcPDx"
      >
        <textarea
          aria-label="Test Input"
          aria-required="false"
          class="TextField__StyledTextArea-j8sdxm-0 ijcioD"
          id="test-input"
          name="test-input"
          type="text"
        />
      </div>
      <span
        class="styles__InputError-r3rrke-2 cKUnfp"
      />
    </div>
  </form>
</div>
`;

exports[`TextField renders properly and on submit shows validation errors 1`] = `
<div>
  <form
    class="Form__StyledForm-zf05us-0 bhlRPh"
  >
    <div
      class="styles__InputFieldWrapper-r3rrke-0 iNxitI"
    >
      <label
        class="styles__InputLabel-r3rrke-1 bYjYOY"
        for="test-input"
      >
        Test Input
      </label>
      <div
        class="styles__Row-r3rrke-3 hrcPDx"
      >
        <textarea
          aria-label="Test Input"
          aria-required="true"
          class="TextField__StyledTextArea-j8sdxm-0 ijcioD"
          id="test-input"
          name="test-input"
          type="text"
        />
        <svg
          class="Help__Icon-gq25zb-0 dZzjNa"
          currentItem="false"
          data-for="test-input"
          data-tip="true"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 708c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm62.9-219.5a48.3 48.3 0 0 0-30.9 44.8V620c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8v-21.5c0-23.1 6.7-45.9 19.9-64.9 12.9-18.6 30.9-32.8 52.1-40.9 34-13.1 56-41.6 56-72.7 0-44.1-43.1-80-96-80s-96 35.9-96 80v7.6c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V420c0-39.3 17.2-76 48.4-103.3C430.4 290.4 470 276 512 276s81.6 14.5 111.6 40.7C654.8 344 672 380.7 672 420c0 57.8-38.1 109.8-97.1 132.5z"
          />
        </svg>
        <div
          class="__react_component_tooltip uuid place-right type-dark"
          data-id="tooltip"
          id="test-input"
        >
          <style>
            
  	.uuid {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.uuid.place-top {
        margin-top: -10px;
    }
    .uuid.place-top::before {
        border-top: 8px solid transparent;
    }
    .uuid.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .uuid.place-bottom {
        margin-top: 10px;
    }
    .uuid.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .uuid.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .uuid.place-left {
        margin-left: -10px;
    }
    .uuid.place-left::before {
        border-left: 8px solid transparent;
    }
    .uuid.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .uuid.place-right {
        margin-left: 10px;
    }
    .uuid.place-right::before {
        border-right: 8px solid transparent;
    }
    .uuid.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
          </style>
          <p>
            Help Text
          </p>
        </div>
      </div>
      <span
        class="styles__InputError-r3rrke-2 cKUnfp"
      >
        error:requiredField
      </span>
    </div>
  </form>
</div>
`;
